# mcp-serializer

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
src/mcp_serializer/: errors.py  initializer.py  managers.py  registry.py  schema.py  serializers.py
src/mcp_serializer/features/base/: assembler.py  container.py  contents.py  definitions.py  parsers.py  schema.py
src/mcp_serializer/features/prompt/: assembler.py  container.py  contents.py  result.py  schema.py
src/mcp_serializer/features/resource/: assembler.py  container.py  contents.py  result.py  schema.py
src/mcp_serializer/features/tool/: assembler.py  container.py  contents.py  result.py  schema.py
tests/: test_basic.py  test_flow.py
tests/features/base/: test_assembler.py  test_container.py  test_contents.py  test_pagination.py  test_parsers.py  test_schema.py
tests/features/prompt/: test_assembler.py  test_container.py  test_contents.py  test_result.py
tests/features/resource/: test_assembler.py  test_container.py  test_contents.py  test_result.py
tests/features/tool/: test_assembler.py  test_container.py  test_contents.py  test_result.py
tests/flow/: test_as_documentation.py  test_prompts_flow.py  test_resources_flow.py  test_tools_flow.py
