[project]
name = "mcp-serializer"
version = "1.0.0"
description = "Register MCP features and serialize JSON-RPC requests into response data"
authors = [
    {name = "Amir Ebrahim md.amire02@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "ruff (>=0.13.2,<0.14.0)",
    "pydantic (>=2.11.10,<3.0.0)"
]

[dependency-groups]
dev = [
    "pytest (>=8.4.2,<9.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
